Add Unicorn Tears Challenge.

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -241,6 +241,7 @@
     "buildings.zebraWorkshop.desc": "Unlocks various zebra upgrades",
     "buildings.ziggurat.label": "Ziggurat",
     "buildings.ziggurat.desc": "The dark legacy of the lost race. Every Ziggurat will improve your culture limits by 8%.<br>May have special usage once Theology is researched.",
+    "buildings.ziggurat.attemptsell": "No.",
     "buildings.tabName": "Bonfire",
     "buildings.group.culture": "Culture",
     "buildings.group.food": "Food Production",
@@ -320,6 +321,9 @@
     "challendge.postApocalypse.effect.desc": "Increases amount of cryochaimbers that can be operational. Unlocks special policies for this run.",
     "challendge.postApocalypse.flavor": "'Surely it's not that bad' they thought",
     "challendge.reservesReclaimed.msg": "Reserves were reclaimed!",
+    "challendge.unicornTears.label": "Unicorn Tears",
+    "challendge.unicornTears.desc": "Restart the game with many buildings changed to require unicorn tears. Storage space for unicorns and unicorn tears is limited.<br><br>Goal: Obtain one necrocorn.",
+    "challendge.unicornTears.effect.desc": "Unicorn Tombs increase max faith based on your transcendence tier.",
     "challendge.winterIsComing.label": "Winter Has Come",
     "challendge.winterIsComing.desc": "Restart the game with only winter seasons. (Catnip will not benefit from paragon production bonus)<br><br>Goal: Get to Helios.",
     "challendge.winterIsComing.effect.desc": "No more cold winters.",
@@ -353,6 +357,7 @@
     "effectsMgr.statics.alicornChance.title": "Alicorns descent chance",
     "effectsMgr.statics.antimatterProduction.title": "Antimatter production",
     "effectsMgr.statics.arrivalSlowdown.title": "Arrival slowdown",
+    "effectsMgr.statics.autoSacrificeUnicornsThreshold.title": "Auto-sacrifice threshold",
     "effectsMgr.statics.barnRatio.title": "Barn expansion",
     "effectsMgr.statics.baseMetalMaxRatio.title": "Maximum base metal bonus",
     "effectsMgr.statics.beaconRelicsPerDay.title": "Relic production",
@@ -458,11 +463,12 @@
     "effectsMgr.statics.lunarOutpostRatio.title": "Lunar Outpost bonus",
     "effectsMgr.statics.luxuryDemandRatio.title": "Luxury consumption",
     "effectsMgr.statics.luxuryHappinessBonus.title":"Luxury happiness bonus",
-    "effectsMgr.statics.mausoleumBonus.title": "Mausoleum ratio",
     "effectsMgr.statics.magnetoBoostRatio.title": "Magneto boost",
     "effectsMgr.statics.magnetoRatio.title": "Production bonus",
     "effectsMgr.statics.manpowerJobRatio.title": "Hunter tools",
     "effectsMgr.statics.manuscriptCost.title": "Manuscript {0} cost",
+    "effectsMgr.statics.markerCostIncrease.title": "Marker cost increase",
+    "effectsMgr.statics.mausoleumBonus.title": "Mausoleum ratio",
     "effectsMgr.statics.maxKittens.title": "Kittens",
     "effectsMgr.statics.maxKittensRatio.title": "Max kittens ratio",
     "effectsMgr.statics.moonBaseStorageBonus.title": "Moon Base capacity bonus",
@@ -565,6 +571,7 @@
     "effectsMgr.statics.tradeKnowledgeRatio.title": "Current trade ratio",
     "effectsMgr.statics.umbraBoostRatio.title": "HR Harvester bonus",
     "effectsMgr.statics.unhappinessRatio.title": "Unhappiness reduction",
+    "effectsMgr.statics.unicornSacrificeRatio.title": "Unicorn sacrifice bonus tears",
     "effectsMgr.statics.unicornsGlobalRatio.title": "Unicorns bonus",
     "effectsMgr.statics.unicornsRatioReligion.title": "Unicorns bonus",
     "effectsMgr.statics.uplinkDCRatio.title": "Data Center synergy bonus",
@@ -577,6 +584,7 @@
     "effectsMgr.statics.zebraAppeasedGoldPenalty.title" : "Gold penalty",
     "effectsMgr.statics.zebraPreparations.title": "Zebra Preparation",
     "effectsMgr.statics.zebraRelationModifier.title" : "Zebra relations modifier",
+    "effectsMgr.statics.zigguratIvoryPriceRatio.title": "Ziggurat ivory price ratio",
     "effectsMgr.type.resConversion": "{0} conversion",
     "effectsMgr.type.resCraftRatio": "{0} craft effectiveness",
     "effectsMgr.type.resDemandRatio": "{0} demand reduction",
@@ -758,6 +766,8 @@
     "policy.frugality.desc": "Stoic philosophers are placed in charge of the mints, making them more effective by reducing corruption.",
     "policy.fullIndustrialization.label" : "Full Industrialization",
     "policy.fullIndustrialization.desc" : "Take the advice of your new captains of industry, slightly improving the crafting bonus each factory provides.",
+    "policy.holyGround.label": "Holy Ground",
+    "policy.holyGround.desc": "Dedicate a place to honor the lost race's legacy. At this site, 5 additional ziggurats will be constructed, and unicorn sacrifices will yield 5% more tears.",
     "policy.isolationism.label" : "Isolationism",
     "policy.isolationism.desc" : "Engage in protectionism of all types, making trades cheaper in terms of gold.",
     "policy.knowledgeSharing.label" : "Knowledge Sharing",
@@ -778,6 +788,9 @@
     "policy.openWoodlands.desc" : "Allow some limited development of nearby lands, increasing wood and mineral production.",
     "policy.outerSpaceTreaty.label" : "Outer Space Treaty",
     "policy.outerSpaceTreaty.desc" : "Agree that space is the domain of all of Cath's races, improving relations with all trading partners.",
+    "policy.persistence.label": "Persistence",
+    "policy.persistence.desc": "Remain true to the beliefs of those who came before you, even if they are unpopular. Unicorns and unicorn tears will be affected by paragon storage bonuses.",
+    "policy.persistence.desc.atheism": "Remain committed to the pursuit of deeper truth, even when everybody else thinks they have enough. Unicorns and unicorn tears will be affected by paragon storage bonuses.",
     "policy.radicalXenophobia.label" : "Radical Xenophobia",
     "policy.radicalXenophobia.desc" : "Reject both evil aliens and evil robots. Mausoleum is twice as effective.",
     "policy.rationality.label" : "Rationality",
@@ -786,6 +799,8 @@
     "policy.rationing.desc": "Stoic philosophers encourage restraint and saving, making hunting more effective and reducing the effect of happiness on catnip consumption.",
     "policy.republic.label" : "Republic",
     "policy.republic.desc" : "Best for large societies. Highly promoted leaders will provide a small bonus to the production of all kittens.",
+    "policy.ritualCalendar.label": "Ritual Calendar",
+    "policy.ritualCalendar.desc": "Hold rituals on a scheduled basis synchronized with the movements of the sun. At the beginning of each season, unicorns above a certain threshold will be sacrificed. Automatic sacrifices have a 30% penalty to unicorn tears gained.",
     "policy.siphoning.label" : "Siphoning",
     "policy.siphoning.desc" : "Pacts consume alicorns and slow down corruption instead of consuming necrocorns. Lack of alicorns or corruption is compensated by consuming necrocorns.",
     "policy.socialism.label" : "Socialism",
@@ -971,7 +986,10 @@
     "religion.sacrificeBtn.all": "all",
     "religion.sacrificeBtn.label": "Sacrifice Unicorns",
     "religion.sacrificeBtn.desc": "Return the unicorns to the Unicorn Dimension. You will receive one Unicorn Tear for every ziggurat you have.",
+    "religion.sacrificeBtn.desc.multiple": "Return the unicorns to the Unicorn Dimension. You will receive {0} Unicorn Tears for every ziggurat you have.",
     "religion.sacrificeBtn.sacrifice.msg": "{0} unicorns have been sacrificed. You've got {1} unicorn tears!",
+    "religion.sacrificeBtn.sacrifice.msg.auto": "{0} unicorns were automatically sacrificed. A penalty was applied, so you only gained {1} unicorn tears.",
+    "religion.sacrificeBtn.sacrifice.msg.overcap": "{0} tears spilled, vanishing into black smoke.",
     "religion.transcend.confirmation.title": "Transcend?",
     "religion.transcend.confirmation.msg": "Are you sure you want to discard part of your epiphany?\n\nYou can reach special transcendence tiers by sacrificing part of your epiphany.\n\nEach tier will boost the effectiveness of worship conversion (Adore the stars).\n\nEvery level requires proportionally more epiphany to be sacrificed.\n\nThis bonus will stack and carry over through resets.\n\nCLICKING THIS BUTTON WILL ERASE PART OF YOUR EPIPHANY AND PRAISING EFFICIENCY.",
     "religion.transcend.msg.failure": "One step closer: {0}%",
