Shark Scribes buy double the iron. Embassy requirement and policy costs adjusted.

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -453,6 +453,7 @@
     "effectsMgr.statics.hydroPlantRatio.title": "Hydro Plant bonus",
     "effectsMgr.statics.hydrofracturer-oilPerTickAutoprodSpace.title": "Hydraulic Fracturer - Oil conversion",
     "effectsMgr.statics.hydroponics-catnipRatio.title": "Hydroponics - Catnip bonus",
+    "effectsMgr.statics.ironBuyRatioIncrease.title": "Shark iron bought increase",
     "effectsMgr.statics.ivoryMeteorChance.title": "Ivory meteor chance",
     "effectsMgr.statics.ivoryMeteorRatio.title": "Ivory meteor bonus",
     "effectsMgr.statics.kittenGrowthRatio.title": "Kittens birth rate",
