Add missing i18n strings

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -574,6 +574,7 @@
     "effectsMgr.statics.unicornSacrificeRatio.title": "Unicorn sacrifice bonus tears",
     "effectsMgr.statics.unicornsGlobalRatio.title": "Unicorns bonus",
     "effectsMgr.statics.unicornsRatioReligion.title": "Unicorns bonus",
+    "effectsMgr.statics.unicornTombTearsMax.title": "Max Tears per Unicorn Tomb",
     "effectsMgr.statics.uplinkDCRatio.title": "Data Center synergy bonus",
     "effectsMgr.statics.uplinkLabRatio.title": "Bio Lab synergy bonus",
     "effectsMgr.statics.uraniumRatio.title": "Uranium savings",
@@ -585,6 +586,7 @@
     "effectsMgr.statics.zebraPreparations.title": "Zebra Preparation",
     "effectsMgr.statics.zebraRelationModifier.title" : "Zebra relations modifier",
     "effectsMgr.statics.zigguratIvoryPriceRatio.title": "Ziggurat ivory price ratio",
+    "effectsMgr.statics.zigguratTearsMax.title": "Max Tears per Ziggurat",
     "effectsMgr.type.resConversion": "{0} conversion",
     "effectsMgr.type.resCraftRatio": "{0} craft effectiveness",
     "effectsMgr.type.resDemandRatio": "{0} demand reduction",
