Rework Persistence to have constant effect

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -791,8 +791,8 @@
     "policy.outerSpaceTreaty.label" : "Outer Space Treaty",
     "policy.outerSpaceTreaty.desc" : "Agree that space is the domain of all of Cath's races, improving relations with all trading partners.",
     "policy.persistence.label": "Persistence",
-    "policy.persistence.desc": "Remain true to the beliefs of those who came before you, even if they are unpopular. Unicorns and unicorn tears will be affected by paragon storage bonuses.",
-    "policy.persistence.desc.atheism": "Remain committed to the pursuit of deeper truth, even when everybody else thinks they have enough. Unicorns and unicorn tears will be affected by paragon storage bonuses.",
+    "policy.persistence.desc": "Remain true to the beliefs of those who came before you, even if they are unpopular. Increase storage for unicorns and unicorn tears.",
+    "policy.persistence.desc.atheism": "Remain committed to the pursuit of deeper truth, even when everybody else thinks they have enough. Increase storage for unicorns and unicorn tears.",
     "policy.radicalXenophobia.label" : "Radical Xenophobia",
     "policy.radicalXenophobia.desc" : "Reject both evil aliens and evil robots. Mausoleum is twice as effective.",
     "policy.rationality.label" : "Rationality",
