--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -369,6 +369,7 @@
     "effectsMgr.statics.boostFromLeader.title": "Boost From Leader",
     "effectsMgr.statics.breweryConsumptionRatio.title": "Brewery consumption ratio",
     "effectsMgr.statics.broadcastTowerRatio.title": "Broadcast Tower bonus",
+    "effectsMgr.statics.buildAdditionalZiggurats.title": "Build additional Ziggurats",
     "effectsMgr.statics.bskSattelitePenalty.title": "Satellite base penalty",
     "effectsMgr.statics.cadBlueprintCraftRatio.title": "Blueprint craft bonus",
     "effectsMgr.statics.calcinerRatio.title": "Calciner bonus",
