New Crowdin updates (#24)
* New translations en.json (Russian)

* New translations en.json (Chinese)

* New translations en.json (Chinese)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Romanian)

* New translations en.json (French)

* New translations en.json (Spanish)

* New translations en.json (Belarusian)

* New translations en.json (Catalan)

* New translations en.json (German)

* New translations en.json (Greek)

* New translations en.json (Hebrew)

* New translations en.json (Italian)

* New translations en.json (Japanese)

* New translations en.json (Korean)

* New translations en.json (Dutch)

* New translations en.json (Norwegian)

* New translations en.json (Polish)

* New translations en.json (Russian)

* New translations en.json (Swedish)

* New translations en.json (Turkish)

* New translations en.json (Ukrainian)

* New translations en.json (Thai)

* New translations en.json (Esperanto)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Chinese)

* New translations en.json (Portuguese - KG)

* New translations en.json (Old French)

* New translations en.json (Chinese Traditional - KG)

* New translations en.json (Czech - KG)

* New translations en.json (Toki Pona)

* New translations en.json (Karakalpak)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Romanian)

* New translations en.json (French)

* New translations en.json (Spanish)

* New translations en.json (Belarusian)

* New translations en.json (Catalan)

* New translations en.json (German)

* New translations en.json (Greek)

* New translations en.json (Hebrew)

* New translations en.json (Italian)

* New translations en.json (Japanese)

* New translations en.json (Korean)

* New translations en.json (Dutch)

* New translations en.json (Norwegian)

* New translations en.json (Polish)

* New translatio

--- a/res/i18n/crowdin/de.json
+++ b/res/i18n/crowdin/de.json
@@ -174,7 +174,7 @@
     "buildings.mine.flavor": "Kumpel im Dunkel",
     "buildings.mint.label": "Münzanstalt",
     "buildings.mint.desc": "Produziert kostbare Ressourcen im Verhältnis zur maximalen Katzen-Kraft. Verbraucht Katzen-Kraft und ein bisschen Gold.",
-    "buildings.observatory.label": "Sternwarte",
+    "buildings.observatory.label": "Observatorium",
     "buildings.observatory.desc": "Erhöht die Chance eines astronomischen Ereignisses um 0.2%",
     "buildings.observatory.flavor": "Der Drang eines Tages die rote Lichtfee zu fangen.",
     "buildings.oilWell.label": "Ölpumpe",
@@ -296,7 +296,7 @@
     "challendge.postApocalypse.label": "Post Apokalypse",
     "challendge.postApocalypse.desc": "Du hast eine kaputte Zeitleiste mit extremer Verschmutzung gefunden. Du kannst deine stärksten Jungs schicken, um dieses Chaos zu beseitigen. Verschmutzung hat weitere negative Auswirkungen. <br>WARNUNG: Sie haben nach dem Start dieser Herausforderung nur begrenzte Zeit, um die Nahrungsmittelproduktion herzustellen.",
     "challendge.postApocalypse.effect.desc": "Erhöht die Anzahl an Krychaimbern, die operativ sein können. Schaltet spezielle Richtlinien für diesen Lauf frei.",
-    "challendge.postApocalypse.flavor": "\"Sicherlich ist es nicht so schlecht\" dachten sie",
+    "challendge.postApocalypse.flavor": "\"Sicherlich ist es nicht so schlimm\" dachten sie",
     "challendge.reservesReclaimed.msg": "Reserven wurden zurückgefordert!",
     "challendge.winterIsComing.label": "Der Winter naht!",
     "challendge.winterIsComing.desc": "Starte das Spiel neu. Es gibt nur die Winterjahreszeit.<br><br>Ziel: Erreiche Helios.",
@@ -432,7 +432,7 @@
     "effectsMgr.statics.luxuryHappinessBonus.title": "Luxus Glücklichkeitsbonus",
     "effectsMgr.statics.mausoleumBonus.title": "Mausoleum Verhältnis",
     "effectsMgr.statics.magnetoBoostRatio.title": "Magneto-Produktionsbonus",
-    "effectsMgr.statics.magnetoRatio.title": "Magneto-Produktionsbonus",
+    "effectsMgr.statics.magnetoRatio.title": "Herstellungsbonus",
     "effectsMgr.statics.manpowerJobRatio.title": "Jäger-Ausrüstung",
     "effectsMgr.statics.manuscriptCost.title": "Manuskript {0} Kosten",
     "effectsMgr.statics.maxKittens.title": "Kätzchen",
@@ -528,7 +528,7 @@
     "effectsMgr.statics.theocracyFaithProductionBonus.title": "Glaubensproduktionsbonus",
     "effectsMgr.statics.timeImpedance.title": "Zeitliche Strafverzögerung",
     "effectsMgr.statics.timeRatio.title": "Zeitlicher-Flux-Bonus",
-    "effectsMgr.statics.tradeCatpowerDiscount.title": "Katzenkraft-Handelsrabatt",
+    "effectsMgr.statics.tradeCatpowerDiscount.title": "Katzenkraft Tauschrabatt",
     "effectsMgr.statics.tradeGoldDiscount.title": "Gold-Handelsrabatt",
     "effectsMgr.statics.tradeKnowledge.title": "Handelswissen",
     "effectsMgr.statics.tradeRatio.title": "Handelsverhältnis",
@@ -616,7 +616,7 @@
     "opts.highlight.desc": "Das Spiel wird die Gebäude die durch den Speicher limitiert sind in Rot hervorheben.",
     "opts.lang": "Sprache",
     "opts.percentage": "Nutze Protzentuale Werte",
-    "opts.percentage.desc": "Das Spiel gibt die prozentuale Produktion zum Gesamtlagervermögen oder die Produktion pro Sekunde an.",
+    "opts.percentage.desc": "Das Spiel verwendet % der Gesamtwerte der Ressourcen, ansonsten die Werte pro Sekunde.",
     "opts.precision": "Aktiviere präzise Angaben",
     "opts.precision.desc": "Das Spiel wird 3 Nachkommastellen für die Ressourcen anzeigen.",
     "opts.tabLayout": "Nutze das legacy Tab Layout",
@@ -705,7 +705,7 @@
     "policy.fascism.label": "Faschismus",
     "policy.fascism.desc": "Lebensraum! Zufriedenheit-Abzüge aus Bevölkerung sind beseitigt und Blockhäuser kosten nur noch die Hälfte.",
     "policy.fullIndustrialization.label": "Vollständige Industrialisierung",
-    "policy.fullIndustrialization.desc": "Beherzige die Ratschläge deiner neuen Industriekapitäne. Verbessert den Handwerksbonus jeder Fabrik leicht.",
+    "policy.fullIndustrialization.desc": "Beherzige die Ratschläge deiner neuen Industriebosse und verbessere den Handwerksbonus, den jede Fabrik bietet, ein wenig.",
     "policy.isolationism.label": "Isolationismus",
     "policy.isolationism.desc": "Fordere den Protektionismus jedweder Art um Goldkosten beim Handeln zu verringern.",
     "policy.knowledgeSharing.label": "Wissen Teilen",
@@ -768,8 +768,8 @@
     "prestige.blackCodex.label": "Schwarzer Codex",
     "prestige.blackCodex.desc": "Schaltet Einhornfriedhöfe frei.",
     "prestige.btn.burnParagon.label": "Paragonverbrennung",
-    "prestige.btn.burnParagon.desc": "Verwirf alle Paragonpunkte",
-    "prestige.carnivals.label": "Karnevale",
+    "prestige.btn.burnParagon.desc": "Verwirf alle Musterpunkte",
+    "prestige.carnivals.label": "Jahrmarkt",
     "prestige.carnivals.desc": "Festivals können aneinandergereiht werden.",
     "prestige.chesed.label": "Chesed",
     "prestige.chesed.desc": "Verbessert Paragoneffekt und -skalierung um 5%",
@@ -835,6 +835,7 @@
     "religion.faithCount.pool": "Gesamter Glaube: {0}",
     "religion.adore.confirmation.msg": "Bist du sicher, dass du allen Glauben in Epiphanie konvertieren möchtest?\n\nDu erhältst einen Bonus zu Glaubenskonvertierung (Lob die Sonne) basierend auf deiner Gesamtzahl an Epiphany.\n\nEpiphany und dieser Bonus bleiben auch beim Zurücksetzen erhalten.\n\nKLICKEN AUF DIESEN BUTTON WIRD SÄMTLICHEN GLAUBEN ENTFERNEN UND DEN SOLAR-REVOLUTION PRODUKTIONSBONUS ZURÜCKSETZEN.",
     "religion.msg.corruption": "Dein Alicorn wurde von den Markern korrumpiert!",
+    "religion.pact.pactOfAnnihilation.desc": "Zerstörungskraft nutzen, Antimateriespeicher erhöhen",
     "religion.panel.cryptotheology.label": "Cryptotheologie",
     "religion.panel.orderOfTheSun.label": "Orden der Sonne",
     "religion.panel.ziggurat.label": "Zikkurate",
@@ -1295,7 +1296,7 @@
     "space.furthestRingMission.desc": "Der äußerste Ring der Galaxis.",
     "space.heliosMission.label": "Mission Helios",
     "space.heliosMission.desc": "Helios ist ein Stern der Spektralklasse G2V und liegt im Zentrum des Cath-System.",
-    "space.kairoMission.label": "Mission Kairo",
+    "space.kairoMission.label": "Kairo Mission",
     "space.kairoMission.desc": "Kairo ist ein Zwergplanet im äußeren Cath-System.",
     "space.moonMission.label": "Mission Mond",
     "space.moonMission.desc": "Starte eine Rakete nach Redmoon, einen Trabanten des Cath Planeten",
@@ -1401,7 +1402,7 @@
     "tab.name.workshop": "Werkstatt",
     "techs.panel.label": "Technologien",
     "time.AccelerateTimeBtn.label": "Tempus Fugit",
-    "time.AccelerateTimeBtn.desc": "Beschleunige und verlangsame Zeit nach Lust und Laune (+50% Beschleunigung)",
+    "time.AccelerateTimeBtn.desc": "Beschleunige und verlangsame die Zeit nach Lust und Laune (+50% Geschwindigkeit)",
     "time.AccelerateTimeBtn.tooltip.normal": "Normaler Zeitfluss",
     "time.AccelerateTimeBtn.tooltip.accelerated": "Beschleunigter Zeitablauf",
     "time.cfu.blastFurnace.label": "Chrono Ofen",
@@ -1744,7 +1745,7 @@
     "village.trait.metallurgist": "Metallurg",
     "village.trait.none": "Ohne",
     "village.trait.scientist": "Wissenschaftler",
-    "village.trait.wise": "Philosoph",
+    "village.trait.wise": "Philosophen",
     "void.spaceCathedral.label": "Weltraumkathedrale",
     "void.spaceCathedral.desc": "TBD.",
     "wipe.confirmation.title": "Löschbestätigung",
@@ -1808,7 +1809,7 @@
     "workshop.all.upgrades.unlocked": "Alle Verbesserungen freigeschaltet!",
     "workshop.toggleResearched.label": "Erforschtes ausblenden.",
     "workshop.advancedAutomation.label": "Fortgeschrittene Automation",
-    "workshop.advancedAutomation.desc": "Die Werkstatt-Automatisierung wird zweimal pro Jahr aktiviert.",
+    "workshop.advancedAutomation.desc": "Werkstatt-Automatisierung wird zweimal pro Jahr aktiviert.",
     "workshop.advancedRefinement.label": "Katzenminzenanreicherung",
     "workshop.advancedRefinement.desc": "Katzenmine wird doppelt so gut verfeinert",
     "workshop.advancedRefinement.flavor": "Es ist alles Spaß und Spiel, bis jemand überfallen wird",
