--- a/res/i18n/crowdin/zh.json
+++ b/res/i18n/crowdin/zh.json
@@ -84,7 +84,7 @@
     "btn.complete": "(完成)",
     "btn.complete.capital": "(完成)",
     "btn.craft": "工艺",
-    "btn.feed": "投食",
+    "btn.feed": "Queue cap",
     "btn.fix.cryo": "修复冷冻仓",
     "btn.leader": "领袖",
     "btn.nextPage": "下一页",
@@ -132,6 +132,7 @@
     "buildings.broadcasttower.desc": "产出文化与幸福。能源过剩时效能提升",
     "buildings.calciner.label": "煅烧炉",
     "buildings.calciner.desc": "高效的金属来源。每 tick 消耗 1.5 矿物和 0.02 石油，产出铁和少量的钛",
+    "buildings.calciner.desc.automation": "自动化将铁产量的 {0}%转换为钢。",
     "buildings.chapel.label": "教堂",
     "buildings.chapel.desc": "产出少量的文化与信仰。也许能被宗教的升级提升",
     "buildings.chronosphere.label": "超时空传送仪",
@@ -140,6 +141,7 @@
     "buildings.dataCenter.desc": "提升摘要对最大科学上限的加成效果",
     "buildings.factory.label": "工厂",
     "buildings.factory.desc": "提升工艺制作效率",
+    "buildings.factory.desc.automation": "自动化可以清除空气中的污染。",
     "buildings.field.label": "猫薄荷田",
     "buildings.field.desc": "在村庄种植一些猫薄荷。猫薄荷田的产量在春天 +50%，冬天 -75%",
     "buildings.field.flavor": "一望无际的猫薄荷",
@@ -179,6 +181,7 @@
     "buildings.observatory.flavor": "渴望能有一天找到闪耀红光的精灵",
     "buildings.oilWell.label": "油井",
     "buildings.oilWell.desc": "产出少量的石油，石油存储上限 +1500",
+    "buildings.oilWell.desc.automation": "自动化消耗能量以增加石油产量。",
     "buildings.oilWell.flavor": "早起，苦干，采油。",
     "buildings.pasture.label": "牧场",
     "buildings.pasture.desc": "提供了新的食物来源，猫薄荷的需求减少了",
@@ -188,6 +191,7 @@
     "buildings.quarry.flavor": "到处都是老鼠!等等，目标不是它们!",
     "buildings.reactor.label": "反应堆",
     "buildings.reactor.desc": "启动后提供 5% 的生产加成。运作需要铀",
+    "buildings.reactor.desc.automation": "自动化消耗钍以增加能源输出。",
     "buildings.reactor.flavor": "发光的老鼠捉起来容易得多!",
     "buildings.refineCatnip.label": "精炼猫薄荷",
     "buildings.refineCatnip.desc": "将猫薄荷精炼成猫薄荷木",
@@ -196,8 +200,11 @@
     "buildings.smelter.flavor": "小心你的胡须!",
     "buildings.solarfarm.label": "太阳能发电站",
     "buildings.solarfarm.desc": "提供了会受季节影响的新能源",
+    "buildings.spaceport.label": "太空港",
+    "buildings.spaceport.desc": "增加太空建筑物的存储容量。不影响科学或反物质。",
     "buildings.steamworks.label": "蒸汽工房",
     "buildings.steamworks.desc": "启动后显著降低煤产量。一开始什么也做不了，经过升级就能做很多很酷的事情",
+    "buildings.steamworks.desc.automation": "自动化在部分资源达到上限时将他们加工为其他资源。",
     "buildings.steamworks.flavor": "我只是在这儿打盹，但就好像我在工作一样",
     "buildings.brewery.label": "酿酒厂",
     "buildings.brewery.desc": "将猫薄荷酿成辛辣饮料。增强节日效果",
@@ -265,6 +272,9 @@
     "calendar.year.ext": "第{0}年 - {1}季",
     "calendar.year.full": "第{0}年 - {1}季, 第{2}天",
     "calendar.year.tooltip": "日历年:",
+    "challendge.effects.show.label": "显示挑战效果",
+    "challendge.effects.hide.label": "隐藏挑战效果",
+    "challendge.effects.panel.label": "{0} 挑战的效果",
     "challendge.panel.label": "挑战",
     "challendge.pending": "选中",
     "challendge.reclaimReserves.label": "取回储存资源",
@@ -295,11 +305,13 @@
     "challendge.pacifism.effect.desc": "更多的贸易站点将为你带来更好的贸易状况",
     "challendge.postApocalypse.label": "后启示录",
     "challendge.postApocalypse.desc": "你发现了一个极度污染的破损的时间线。你将带着你最强的小猫们来清除这个东西。 污染拥有更多的负面效果。 <br>警告：在开始这个挑战后，你只有限的时间建立粮食生产。",
+    "challendge.postApocalypse.effect.desc": "增加可以运行的冷冻仓数量。为此轮游戏解锁特殊政策。",
     "challendge.postApocalypse.flavor": "他们认为“肯定没那么糟糕”",
     "challendge.reservesReclaimed.msg": "储备已收复！",
     "challendge.winterIsComing.label": "冬天来了",
     "challendge.winterIsComing.desc": "重启游戏，只有冬天:猫薄荷不会受到领导力的生产加成<br><br>目标: 到达太阳",
     "challendge.winterIsComing.effect.desc": "温暖季节出现的机会增加，寒冷季节出现的机会减少",
+    "challendge.btn.chronosphere.desc": " 本次重置时间线时超时空传送仪不会传送物资到下一轮。这些资源将会被放入储藏空间中。",
     "challendge.btn.chronosphere.with.ironWill.desc": "你将不能获得超时空传送仪的重置效果。<br />警告:超时空传送仪的重置效果将自动关闭钢铁意志模式。",
     "challendge.btn.confirmation.title": "确认挑战",
     "challendge.btn.confirmation.msg": "你确定要重置当前游戏并开始此挑战吗?",
@@ -316,6 +328,7 @@
     "discardParagon.confirmation.msg1": "确定要舍弃所有的领导力吗?此操作无法撤消。",
     "discardParagon.confirmation.msg2": "你有很多领导力，你真的确定吗?",
     "discardParagon.confirmation.msgIW": "警告! 燃烧领导力将破坏你的钢铁意志模式。你要继续吗?",
+    "effectsMgr.statics.academyMeteorBonus.title": "陨石产出加成",
     "effectsMgr.statics.acceleratorRatio.title": "加速器扩容",
     "effectsMgr.statics.activeHG.title": "已激活",
     "effectsMgr.statics.aiCoreProductivity.title": "AI 核心生产加成",
@@ -323,6 +336,7 @@
     "effectsMgr.statics.aiLevel.title": "AI 等级",
     "effectsMgr.statics.alicornChance.title": "天角兽降临概率",
     "effectsMgr.statics.antimatterProduction.title": "反物质产出",
+    "effectsMgr.statics.arrivalSlowdown.title": "小猫抵达减缓",
     "effectsMgr.statics.barnRatio.title": "粮仓扩容",
     "effectsMgr.statics.baseMetalMaxRatio.title": "金属资源上限加成",
     "effectsMgr.statics.beaconRelicsPerDay.title": "灯塔遗物产出",
@@ -332,7 +346,9 @@
     "effectsMgr.statics.blsLimit.title": "BLS 上限",
     "effectsMgr.statics.blsProductionBonus.title": "BLS 生产加成",
     "effectsMgr.statics.boostFromLeader.title": "领袖加成",
+    "effectsMgr.statics.breweryConsumptionRatio.title": "酿酒厂消耗速率",
     "effectsMgr.statics.broadcastTowerRatio.title": "广播塔加成",
+    "effectsMgr.statics.bskSattelitePenalty.title": "卫星星图产出惩罚",
     "effectsMgr.statics.cadBlueprintCraftRatio.title": "蓝图制作加成",
     "effectsMgr.statics.calcinerRatio.title": "煅烧炉加成",
     "effectsMgr.statics.calcinerSteelCraftRatio.title": "钢铁工厂的煅烧炉加成",
@@ -354,6 +370,8 @@
     "effectsMgr.statics.corruptionRatio.title": "腐化速率",
     "effectsMgr.statics.crackerRatio.title": "星球裂解加成",
     "effectsMgr.statics.craftRatio.title": "工艺制作加成",
+    "effectsMgr.statics.cryochamberSupport.title": "冷冻仓基础设施",
+    "effectsMgr.statics.cryostationStorageBonus.title": "低温储存站容量加成",
     "effectsMgr.statics.cryostation-coalMax.title": "低温储存站 - 煤上限",
     "effectsMgr.statics.cryostation-ironMax.title": "低温储存站 - 铁上限",
     "effectsMgr.statics.cryostation-mineralsMax.title": "低温储存站 - 矿物上限",
@@ -369,6 +387,7 @@
     "effectsMgr.statics.dataCenterAIRatio.title": "AI 核心数据中心连携加成",
     "effectsMgr.statics.eludiumAutomationBonus.title": "E合金工程师工艺制作加成",
     "effectsMgr.statics.embassyCostReduction.title": "大使馆费用降低",
+    "effectsMgr.statics.embassyFakeBought.title": "大使馆费用增加",
     "effectsMgr.statics.energyConsumption.title": "能源消耗",
     "effectsMgr.statics.energyConsumptionIncrease.title": "能耗增加",
     "effectsMgr.statics.energyConsumptionRatio.title": "减少能源消耗",
@@ -395,10 +414,12 @@
     "effectsMgr.statics.goldMaxRatio.title": "黄金上限加成",
     "effectsMgr.statics.happiness.title": "幸福度",
     "effectsMgr.statics.hapinnessConsumptionRatio.title": "幸福度消耗",
+    "effectsMgr.statics.happinessKittenProductionRatio.title": "小猫幸福度产出加成",
     "effectsMgr.statics.harborCoalRatio.title": "港口煤存储量扩容",
     "effectsMgr.statics.harborRatio.title": "港口船扩容",
     "effectsMgr.statics.hashrate.title": "当前算力",
-    "effectsMgr.statics.hashrateLevel.title": "算力等级",
+    "effectsMgr.statics.hashrateLevel.title": "Sort queue items by alphabet",
+    "effectsMgr.statics.heatEfficiency.title": "时间热转换效率",
     "effectsMgr.statics.heatMax.title": "热度上限",
     "effectsMgr.statics.heatMaxExpansion.title": "热度上限提升",
     "effectsMgr.statics.heatPerTick.title": "散热速率",
@@ -412,6 +433,7 @@
     "effectsMgr.statics.ivoryMeteorChance.title": "象牙流星概率",
     "effectsMgr.statics.ivoryMeteorRatio.title": "象牙流星加成",
     "effectsMgr.statics.kittenGrowthRatio.title": "小猫出生速率",
+    "effectsMgr.statics.kittensKarmaPerMinneliaRatio.pact.title": "契约千年业力增长比例",
     "effectsMgr.statics.kittenLaziness.title": "猫咪慵懒度",
     "effectsMgr.statics.leviathansEnergyModifier.title": "利维坦能量上限",
     "effectsMgr.statics.libraryRatio.title": "图书馆加成",
@@ -424,10 +446,13 @@
     "effectsMgr.statics.magnetoBoostRatio.title": "磁电机增幅",
     "effectsMgr.statics.magnetoRatio.title": "生产加成",
     "effectsMgr.statics.manpowerJobRatio.title": "猎人工具",
+    "effectsMgr.statics.manuscriptCost.title": "手稿 {0} 成本",
     "effectsMgr.statics.maxKittens.title": "小猫",
     "effectsMgr.statics.maxKittensRatio.title": "小猫上限比率",
+    "effectsMgr.statics.moonBaseStorageBonus.title": "月球基地容量加成",
     "effectsMgr.statics.moonOutpost-unobtainiumPerTickSpace.title": "月球前哨 - 难得素转化",
     "effectsMgr.statics.mysticismBonus.title": "神秘主义加成",
+    "effectsMgr.statics.necrocornPerDay.pact.title": "死灵兽消耗",
     "effectsMgr.statics.nextHashLevelAt.title": "到达下一算力等级需要",
     "effectsMgr.statics.nonZebraRelationModifier.title": "非斑马关系改变",
     "effectsMgr.statics.observatoryRatio.title": "天文台科学比率",
@@ -441,6 +466,7 @@
     "effectsMgr.statics.pactGlobalResourceRatio.title": "每个金字塔储量",
     "effectsMgr.statics.pollutionRatio.title": "污染物产生量",
     "effectsMgr.statics.policyFakeBought.title": "政策消耗变为1.25倍",
+    "effectsMgr.statics.planetCrackerStorageBonus.title": "星球裂解容量加成",
     "effectsMgr.statics.planetCracker-uraniumPerTickSpace.title": "星球裂解 - 铀转化",
     "effectsMgr.statics.priceRatio.title": "建筑价格",
     "effectsMgr.statics.prodTransferBonus.title": "地面生产加成转移",
@@ -468,6 +494,7 @@
     "effectsMgr.statics.shatterCostReduction.title": "燃烧时间水晶消耗降低",
     "effectsMgr.statics.shatterTCGain.title": "资源回复",
     "effectsMgr.statics.shatterVoidCost.title": "燃烧时间水晶的虚空基础消耗",
+    "effectsMgr.statics.shatterYearBoost.title": "自定义时间水晶燃烧量",
     "effectsMgr.statics.shipLimit.title": "船上限",
     "effectsMgr.statics.skillMultiplier.title": "小猫技能效果",
     "effectsMgr.statics.masterSkillMultiplier.title": "小猫熟练度级别的效果",
@@ -491,12 +518,14 @@
     "effectsMgr.statics.starAutoSuccessChance.title": "自动天文事件概率",
     "effectsMgr.statics.starEventChance.title": "天文事件概率",
     "effectsMgr.statics.starchartGlobalRatio.title": "星图加成",
+    "effectsMgr.statics.steamworksFakeBought.title": "蒸汽工房费用增加",
     "effectsMgr.statics.sunlifter-energyProduction.title": "太阳提取 - 能源产出",
     "effectsMgr.statics.t1CraftRatio.title": "1级工程师专有技能",
     "effectsMgr.statics.t2CraftRatio.title": "2级工程师专有技能",
     "effectsMgr.statics.t3CraftRatio.title": "3级工程师专有技能",
     "effectsMgr.statics.t4CraftRatio.title": "4级工程师专有技能",
     "effectsMgr.statics.t5CraftRatio.title": "5级工程师专有技能",
+    "effectsMgr.statics.temporalPressCap.title": "时间增压机上限",
     "effectsMgr.statics.tcRefineRatio.title": "天角兽献祭加成",
     "effectsMgr.statics.technocracyScienceCap.title": "科学上限加成",
     "effectsMgr.statics.tectonicBonus.title": "构造体加成",
@@ -640,6 +669,9 @@
     "opts.notation.si": "SI",
     "opts.notation.e": "E",
     "opts.notation.sie": "SI+E",
+    "msg.necrocornDeficit.info": "死灵兽赤字： {0}。由于赤字，契约效果被削弱至 {1}%的效果。 赤字每天消耗额外的 {2}%死灵兽，并每天减少 {3} (如果你有足够的死灵兽)。",
+    "msg.pacts.info": "每千年会自动根据未签订的契约产生业力。契约在重置时间线时重置。可用的契约︰ {0}。每个契约每天都消耗 {1} 死灵兽。",
+    "msg.pacts.fractured": "你没有完成契约中你需要付出的部分... 你失去了 {0} 天角兽！",
     "msg.policy.aiNotMerges": "AI 拒绝与猫猫融合",
     "msg.policy.exclusivity": "相同价格的政策是互斥的",
     "msg.policy.kittenNotMadeLeader": "{0} 要求领袖必须担任 {1} 的工作",
@@ -652,6 +684,7 @@
     "policy.bigStickPolicy.label": "巨棒外交",
     "policy.bigStickPolicy.desc": "温言在口，大棒在手，故而致远。大使馆价格降低",
     "policy.carnivale.label": "狂欢节",
+    "policy.carnivale.desc": "一支由伊比鸠鲁主义哲学家组成的队伍选择步入政治生活。接纳这一思想，以提高节日间小猫的到达速度，代价是在节日期间增加奢侈品消耗。",
     "policy.cityOnAHill.label": "山巅之城",
     "policy.cityOnAHill.desc": "成为可憎世界中的灯塔。文化上限轻微提升",
     "policy.clearCutting.label": "皆伐",
@@ -659,7 +692,9 @@
     "policy.clearSkies.label": "青空",
     "policy.clearSkies.desc": "猫猫心理学家担心空间反射镜对小猫幸福感的影响，拒绝反射镜会带来一些幸福度提升",
     "policy.cryochamberExtraction.label": "不朽主义",
+    "policy.cryochamberExtraction.desc": "提取冷冻仓 (?)",
     "policy.terraformingInsight.label": "太空扩张主义",
+    "policy.terraformingInsight.desc": "星球改造猫口上限增加",
     "policy.communism.label": "共产主义",
     "policy.communism.desc": "不惜一切代价实现工业化。增加煤炭、铁和钛的产量，并降低工厂的价格",
     "policy.conservation.label": "环境保护",
@@ -675,6 +710,7 @@
     "policy.expansionism.label": "新古典宇宙自由主义",
     "policy.expansionism.desc": "月球私有化! 喵星没什么变化，但难得素产量增加",
     "policy.extravagance.label": "奢靡主义",
+    "policy.extravagance.desc": "一部分伊比鸠鲁主义哲学家认为我们应当在当前理念上更进一步。 奢侈资源将增加更多的幸福度，但将会以原有的三倍速度被消耗。",
     "policy.fascism.label": "法西斯主义",
     "policy.fascism.desc": "生存空间! 消除猫口的幸福度惩罚，并使木屋价格减半",
     "policy.frugality.label": "节俭",
@@ -841,6 +877,7 @@
     "religion.pact.pactOfPurity.label": "纯洁之契约",
     "religion.pact.pactOfPurity.desc": "净化山川天地，洞察宇宙玄秘，驱散暗涌阴翳，填补现实罅隙。",
     "religion.pact.payDebt.label": "偿还旧债",
+    "religion.pact.payDebt.desc": "交出足够的死灵兽以移除死灵兽赤字",
     "religion.pact.fractured.label": "弃誓毁约",
     "religion.pact.fractured.desc": "你没能履行约定... 到了该清算的时候了",
     "religion.panel.cryptotheology.label": "奥秘神学",
@@ -848,7 +885,7 @@
     "religion.panel.ziggurat.label": "庙塔",
     "religion.praise.msg": "你积累了 +{0} 信仰",
     "religion.praiseBtn.desc": "将积累的信仰转化为虔诚",
-    "religion.praiseBtn.label": "赞美太阳!",
+    "religion.praiseBtn.label": "Sort queue items by alphabet",
     "religion.refineTCsBtn.desc": "将时间水晶精炼为上古遗物",
     "religion.refineTCsBtn.label": "精炼时间水晶",
     "religion.refineTCsBtn.refine.msg": "精炼了 {0} 颗时间水晶，得到了 {1} 份遗物",
@@ -885,6 +922,7 @@
     "religion.sacrificeBtn.desc": "使独角兽回归独角兽的维度。每级庙塔会收到一滴独角兽眼泪",
     "religion.sacrificeBtn.sacrifice.msg": "{0} 只独角兽被献祭。你获得了 {1} 滴独角兽眼泪!",
     "religion.transcend.confirmation.title": "要进行次元超越吗?",
+    "religion.transcend.confirmation.msg": "确定要舍弃部分顿悟吗?\n\n通过牺牲一部分顿悟可以提升到新的超越等级。\n\n每个超越等级都将提升信仰转化为虔诚的效率(赞美群星)。\n\n每次提升超越等级都需要牺牲更多的顿悟。\n\n此加成可以累积并在游戏重置时保留。\n\n点击此按钮将移除一部分顿悟和赞美太阳加成。",
     "religion.transcend.msg.failure": "更近一步: {0}%",
     "religion.transcend.msg.success": "超越了猫类的极限。达到超越等级: {0}",
     "religion.transcendBtn.label": "次元超越",
@@ -914,6 +952,7 @@
     "religion.tu.holyGenocide.desc": "将您的最大人口上限降低 1%。将所有与人口相关的影响增加 2%",
     "religion.tu.holyGenocide.flavor": "我们居住在黑暗的无限之海中一座名为无知的平静小岛，而这并不意味着我们应该远航。",
     "religion.tu.mausoleum.label": "陵墓",
+    "religion.tu.mausoleum.desc": "供奉过去的小猫。增加可用契约。",
     "religion.tu.singularity.label": "黑洞视界",
     "religion.tu.singularity.desc": "全局资源存储上限提升 10%",
     "religion.tu.singularity.flavor": "一个入口……通往什么?",
@@ -952,24 +991,31 @@
     "res.effect": "效果",
     "res.effects": "效果",
     "res.netGain": "净收益",
+    "res.netGainPerDay": "每天净差数",
     "res.notify.msg": "当 {0} 可建造时系统会向你发送通知。",
     "res.notify.ready.title": "所需资源已达到购买条件",
     "res.notify.ready": "{0} 已就绪",
     "res.notify.unavailable": "该建筑所需资源的存储上限不足因此无法建造。请稍后再试。",
     "res.notify.unavailableTime": "该建筑将会在 ({0}+ 天) 后可建造。请稍后再试。",
     "res.stack.baseline": "基础值",
+    "res.stack.baselineRatio": "改良",
     "res.stack.bonusTransf": "转移加成",
     "res.stack.boost": "增益",
     "res.stack.buildings": "建筑",
+    "res.stack.corruptionPerDay": "腐化",
+    "res.stack.corruptionPerDayProduction": "腐化产出",
+    "res.stack.corruptionPerDaySiphoned": "虹吸消耗",
     "res.stack.policy": "政策",
     "res.stack.pollution": "污染",
     "res.stack.convCons": "转化消耗",
     "res.stack.convProd": "转化产量",
     "res.stack.culturalExchanges": "文化交换",
     "res.stack.demand": "(:3) 需求",
+    "res.stack.destruction": "契约",
     "res.stack.engineer": "(:3) 工程师",
     "res.stack.environmentPolicy": "环境政策",
     "res.stack.expansionism": "宇宙自由主义加成",
+    "res.stack.extermination": "契约",
     "res.stack.faith": "信仰",
     "res.stack.holyGenocide": "神圣的种族灭绝",
     "res.stack.solarRevolution": "太阳革命",
@@ -999,6 +1045,8 @@
     "res.stack.weather": "天气",
     "res.stack.zebraRelationsAppeasementPenalty": "斑马关系-绥靖政策惩罚",
     "res.toCap": "封顶",
+    "res.toNextKitten": "到下一只小猫",
+    "res.toNextNecrocorn": "到下一只死灵兽",
     "res.toZero": "耗尽",
     "res.show.hidden": "显示隐藏资源",
     "reset.confirmation.title": "确定要重置游戏吗?",
@@ -1028,6 +1076,7 @@
     "resources.gear.title": "齿轮",
     "resources.gflops.title": "浮点",
     "resources.gold.title": "黄金",
+    "resources.hashrates.title": "算力",
     "resources.iron.title": "铁",
     "resources.ivory.title": "象牙",
     "resources.karma.title": "业力",
@@ -1038,6 +1087,7 @@
     "resources.megalith.title": "巨石",
     "resources.minerals.title": "矿物",
     "resources.necrocorn.title": "死灵兽",
+    "resources.necrocornDeficit.title": "死灵兽赤字",
     "resources.oil.title": "石油",
     "resources.paragon.title": "领导力",
     "resources.parchment.title": "羊皮纸",
@@ -1115,6 +1165,8 @@
     "science.astronomy.label": "天文学",
     "science.astronomy.desc": "天文学是研究天体的科学。推动科学的发展",
     "science.astronomy.effectDesc": "解锁天文台和星图",
+    "science.artificialGravity.label": "人工重力",
+    "science.artificialGravity.desc": "新的反重力引擎提供了一种新的远距离太空旅行方式。",
     "science.biochemistry.label": "生物化学",
     "science.biochemistry.desc": "促进化学和生物相关科技的发展",
     "science.biochemistry.effectDesc": "解锁生物燃料加工",
@@ -1372,6 +1424,7 @@
     "space.yarnMission.label": "探索纱星",
     "space.yarnMission.desc": "纱星是一颗拥有适宜气候、海洋和含氧大气的类地行星",
     "stats.buildings": "建造建筑",
+    "stats.challenges.total": "已完成的挑战",
     "stats.clicks.total": "累计点击总数",
     "stats.crafts.current": "工艺制作次数",
     "stats.crafts.total": "累计工艺制作次数",
@@ -1386,7 +1439,8 @@
     "stats.run.number": "周目数",
     "stats.time.current": "游戏时间",
     "stats.trades.current": "贸易完成次数",
-    "stats.trades.total": "累计贸易完成次数",
+    "stats.trades.total": "Sort queue items by alphabet",
+    "stats.transcendenceTier": "超越等级",
     "stats.unicorns": "献祭独角兽",
     "stats.years.total": "游戏总年数",
     "tab.name.achievements": "成就",
@@ -1405,13 +1459,16 @@
     "time.AccelerateTimeBtn.tooltip.accelerated": "日月如梭",
     "time.cfu.blastFurnace.label": "时计炉",
     "time.cfu.blastFurnace.desc": "操作时间热。最大热度上限提高 100 点",
+    "time.cfu.blastFurnace.desc2": "每100%的燃料，自动化跳到未来一年。",
     "time.cfu.ressourceRetrieval.label": "资源回复",
     "time.cfu.ressourceRetrieval.desc": "燃烧时间水晶时获得一部分每年原应产出的资源",
     "time.cfu.temporalAccelerator.label": "时空加速器",
     "time.cfu.temporalAccelerator.desc": "提升时间相关效果5%",
+    "time.cfu.temporalAccelerator.desc2": "自动化减少燃烧时间水晶卡顿",
     "time.cfu.temporalBattery.label": "时间电池",
     "time.cfu.temporalBattery.desc": "时间通量的容量提升 25%",
     "time.cfu.temporalPress.label": "时间增压机",
+    "time.cfu.temporalPress.desc": "允许对燃烧时间水晶进行微调",
     "time.cfu.temporalImpedance.label": "时间阻抗",
     "time.cfu.temporalImpedance.desc": "黑暗未来的时间惩罚延迟 1000 年",
     "time.cfu.timeBoiler.label": "时间锅炉",
@@ -1505,6 +1562,7 @@
     "trade.correct.bcoin": "加密货币市场出现了巨大的调整",
     "trade.embassy.label": "大使馆",
     "trade.embassy.desc": "设立大使馆，改善外交关系",
+    "trade.embassy.chance": "交易获得资源概率",
     "trade.embassy.pinned": "固定",
     "trade.embassy.unpinned": "取消固定",
     "ui.filter.all": "全部",
@@ -1515,6 +1573,7 @@
     "ui.kgnet.online": "在线",
     "ui.kgnet.save.save": "保存",
     "ui.kgnet.save.load": "加载",
+    "ui.kgnet.sync": "同步云存档",
     "ui.toggle.researched": "切换已研究",
     "ui.loading.msg.0": "正在饲喂斑马",
     "ui.loading.msg.1": "正在校准庙塔",
@@ -1612,10 +1671,13 @@
     "console.filter.unicornRift": "独角兽裂隙",
     "console.filter.unicornSacrifice": "献祭独角兽",
     "console.filter.alicornRift": "天角兽裂隙",
+    "console.filter.alicornSacrifice": "天角兽献祭",
     "console.filter.alicornCorruption": "天角兽腐化",
     "console.filter.tcShatter": "燃烧时间水晶",
     "console.filter.tcRefine": "精炼时间水晶",
     "console.filter.faith": "信仰",
+    "console.filter.elders": "利维坦到达",
+    "console.filter.blackcoin": "黑币交易",
     "village.bonus.desc.chemist": "化学工艺制作加成",
     "village.bonus.desc.engineer": "工艺制作加成",
     "village.bonus.desc.manager": "狩猎加成",
@@ -2091,6 +2153,7 @@
     "workshop.spaceEngineers.desc": "提高工程师的工作效率",
     "workshop.spaceManufacturing.label": "太空制造",
     "workshop.spaceManufacturing.desc": "工厂为空间生产提供奖金，占工厂工艺比例的75%",
+    "workshop.spiceNavigation.label": "香料导航",
     "workshop.starlink.label": "星链",
     "workshop.starlink.desc": "每级数据中心为生物实验室提供额外 1％ 的加成",
     "workshop.stasisChambers.label": "静止室",
