--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -583,7 +583,7 @@
     "effectsMgr.statics.voidResonance.title": "Order of the Void bonus",
     "effectsMgr.statics.warehouseRatio.title": "Warehouse expansion",
     "effectsMgr.statics.weaponEfficency.title": "Weapon efficiency",
-    "effectsMgr.statics.workshopBaseTearsCost.title": "Workshop upgrade tears cost",
+    "effectsMgr.statics.workshopBaseTearsCost.title": "Workshop upgrade base tears cost",
     "effectsMgr.statics.woodJobRatio.title": "Woodcutter tools",
     "effectsMgr.statics.zebraAppeasedGoldPenalty.title" : "Gold penalty",
     "effectsMgr.statics.zebraPreparations.title": "Zebra Preparation",
