Add a reserves panel to the challenge UI

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -332,6 +332,16 @@
     "challendge.btn.log.message.on.complete": "Congratulations! You complete the challenge {0}.",
     "challendge.btn.name.complete": "{0} (Complete)",
     "challendge.btn.name.current": "{0} (Active)",
+    "challendge.reserves.cryochambers.label": "Cryochambers in reserve: {0}",
+    "challendge.reserves.panel.label": "Reserves: Store Resources in a Safe Place",
+    "challendge.reserves.panel.reclaim.instructions": "You can reclaim reserves when you are not in any challenge.",
+    "challendge.reserves.panel.summary": "When you reset into a challenge, any resources you would carry over using Chronospheres are instead put into reserves. Reserves persist through resets until you reclaim them.",
+    "challendge.reserves.resources.10orMore": "Some.",
+    "challendge.reserves.resources.20orMore": "Many.",
+    "challendge.reserves.resources.30orMore": "Tons.",
+    "challendge.reserves.resources.label": "Resources in reserve:",
+    "challendge.reserves.resources.lessThan10": "A few.",
+    "challendge.reserves.resources.none": "There are no resources in reserve.",
 
     "common.collapse.all": "Collapse all",
     "common.expand.all": "Expand all",
