Challenges Panel UI improvements

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -288,6 +288,7 @@
     "challendge.effects.hide.label": "Hide Challenge effects",
     "challendge.effects.panel.label": "Effects of {0} Challenge",
     "challendge.panel.label": "Challenges",
+    "challendge.panel.pending": "Pending challenges: {0}. Your game will be reset in order to enable the challenge.",
     "challendge.pending": "Pending",
     "challendge.reclaimReserves.label": "Reclaim reserves",
     "challendge.reclaimReserves.desc": "Reclaim resources from the beyond",
@@ -329,18 +330,19 @@
     "challendge.btn.confirmation.msg": "Are you sure you want to start this challenge by resetting the game ?",
     "challendge.btn.confirmation_postApocalypse_winterIsComing.msg": "\nWARNING: Limited time to establish kitten housing!",
     "challendge.btn.desc": "<br>Gain: {0}<br><br>Your game will be reset in order to enable this challenge. {1}",
+    "challendge.btn.desc.new": "<br>Gain: {0}",
     "challendge.btn.log.message.on.complete": "Congratulations! You complete the challenge {0}.",
     "challendge.btn.name.complete": "{0} (Complete)",
     "challendge.btn.name.current": "{0} (Active)",
     "challendge.reserves.cryochambers.label": "Cryochambers in reserve: {0}",
     "challendge.reserves.panel.label": "Reserves: Store Resources in a Safe Place",
     "challendge.reserves.panel.reclaim.instructions": "You can reclaim reserves when you are not in any challenge.",
-    "challendge.reserves.panel.summary": "When you reset into a challenge, any resources you would carry over using Chronospheres are instead put into reserves. Reserves persist through resets until you reclaim them.",
-    "challendge.reserves.resources.10orMore": "Some.",
-    "challendge.reserves.resources.20orMore": "Many.",
-    "challendge.reserves.resources.30orMore": "Tons.",
+    "challendge.reserves.panel.summary": "When you reset into a challenge, any resources you would carry over using Chronospheres are instead put into reserves. Reserves persist through resets until you manually reclaim them.",
+    "challendge.reserves.resources.10orMore": "Some",
+    "challendge.reserves.resources.20orMore": "Many",
+    "challendge.reserves.resources.30orMore": "Tons",
     "challendge.reserves.resources.label": "Resources in reserve:",
-    "challendge.reserves.resources.lessThan10": "A few.",
+    "challendge.reserves.resources.lessThan10": "A few",
     "challendge.reserves.resources.none": "There are no resources in reserve.",
 
     "common.collapse.all": "Collapse all",
