Added Naga Architects

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -479,6 +479,7 @@
     "effectsMgr.statics.moonBaseStorageBonus.title": "Moon Base capacity bonus",
     "effectsMgr.statics.moonOutpost-unobtainiumPerTickSpace.title": "Lunar Outpost - Unobtainium conversion",
     "effectsMgr.statics.mysticismBonus.title" : "Mysticism Bonus",
+    "effectsMgr.statics.nagaBlueprintTradeChance.title": "Naga blueprint trade chance",
     "effectsMgr.statics.necrocornPerDay.pact.title": "Necrocorn consumption",
     "effectsMgr.statics.negativeCycleRatioPolicy.title": "Cycle negative effect reduction",
     "effectsMgr.statics.nextHashLevelAt.title": "Next hashrate level at",
@@ -801,6 +802,8 @@
     "policy.monarchy.desc" : "Best for societies benefiting from past experiences. Makes the leader's trait twice as powerful. Maintaining the royal court takes 10% of gold production.",
     "policy.mysticism.label" : "Mysticism",
     "policy.mysticism.desc" : "Accept the view that there are forces beyond the comprehension of kittens. Gain a small bonus to culture and faith production, though you might look silly for a while.",
+    "policy.nagaRelationsArchitects.label" : "Naga Relations: Architects",
+    "policy.nagaRelationsArchitects.desc" : "Naga architects know some unique building techniques we do not possess, come to a trade agreement with them to obtain blueprints and study them.<br><br>Building embassies will increase the chance to get blueprints from Nagas. Once a sufficient number of embassies are built, they will improve the blueprint crafting ratio",
     "policy.nagaRelationsMasons.label" : "Naga Relations: Masons",
     "policy.nagaRelationsMasons.desc" : "Work together with Naga masons to improve processing methods of stone.",
     "policy.nagaRelationsCultists.label" : "Naga Relations: Cultists",
