Changed two policies
Changed Dragon Astrologers and Lizard Ecologists.
Removed some unused code.

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -557,6 +557,7 @@
     "effectsMgr.statics.starAutoSuccessChance.title": "Auto astronomical event chance",
     "effectsMgr.statics.starEventChance.title": "Astronomical event chance",
     "effectsMgr.statics.starchartGlobalRatio.title": "Starchart bonus",
+    "effectsMgr.statics.starchartPolicyRatio.title": "Starchart bonus", 
     "effectsMgr.statics.steamworksFakeBought.title": "Steamworks cost increase",
     "effectsMgr.statics.sunlifter-energyProduction.title": "Sunlifter - Energy production",
     "effectsMgr.statics.t1CraftRatio.title": "Class 1 engineer's know-how",
@@ -564,7 +565,6 @@
     "effectsMgr.statics.t3CraftRatio.title": "Class 3 engineer's know-how",
     "effectsMgr.statics.t4CraftRatio.title": "Class 4 engineer's know-how",
     "effectsMgr.statics.t5CraftRatio.title": "Class 5 engineer's know-how",
-    "effectsMgr.statics.tankerCapacityRatioBonus.title": "Tanker capacity bonus",
     "effectsMgr.statics.temporalPressCap.title": "Temporal press cap",
     "effectsMgr.statics.tcRefineRatio.title": "Alicorns sacrifice bonus",
     "effectsMgr.statics.technocracyScienceCap.title": "Science cap bonus",
@@ -757,7 +757,7 @@
     "policy.dragonRelationsPhysicists.label" : "Dragon Relations: Physicists",
     "policy.dragonRelationsPhysicists.desc" : "Work together with dragon physicists to improve reactors.",
     "policy.dragonRelationsAstrologers.label" : "Dragon Relations: Astrologers",
-    "policy.dragonRelationsAstrologers.desc" : "Work together with Dragon astrologers to to study celestial objects.",
+    "policy.dragonRelationsAstrologers.desc" : "Work together with Dragon astrologers to to study celestial objects. <br>You get bonus to starcharts that increases every year you are in a cycle.",
     "policy.terraformingInsight.label": "Space expansionism",
     "policy.terraformingInsight.desc" : "Terraforming efficiency is increased",
     "policy.communism.label" : "Communism",
@@ -813,7 +813,7 @@
     "policy.lizardRelationsDiplomats.label" : "Lizard Relations: Diplomats",
     "policy.lizardRelationsDiplomats.desc" : "Work together with lizard diplomats to befriend the races of Cath. Building embassies will grant a culture production bonus.",
     "policy.lizardRelationsEcologists.label" : "Lizard Relations: Ecologists",
-    "policy.lizardRelationsEcologists.desc" : "Work together with lizard ecologists to preserve Cath.",
+    "policy.lizardRelationsEcologists.desc" : "Work together with lizard ecologists to preserve Cath.<br>Low pollution levels will grant a bonus to some green energy sources.",
     "policy.lizardRelationsPriests.label" : "Lizard Relations: Priests",
     "policy.lizardRelationsPriests.desc" : "Work together with lizard priests to praise the sun together.",
     "policy.openWoodlands.label" : "Open Woodlands",
