feat: Create a log category for festivals

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1765,6 +1765,7 @@
     "console.filter.faith": "Faith",
     "console.filter.elders": "Leviathans Arrival",
     "console.filter.blackcoin": "Blackcoin Transactions",
+    "console.filter.festival": "Festivals",
 
     "village.bonus.desc.chemist": "Chemical crafting bonus",
     "village.bonus.desc.engineer": "Crafting bonus",
