Buff Ritual Calendar by allowing auto-sacrifices to bypass storage limits

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -358,6 +358,7 @@
     "effectsMgr.statics.antimatterProduction.title": "Antimatter production",
     "effectsMgr.statics.arrivalSlowdown.title": "Arrival slowdown",
     "effectsMgr.statics.autoSacrificeUnicornsThreshold.title": "Auto-sacrifice threshold",
+    "effectsMgr.statics.autoSacrificeStableOvercapRatio.title": "Bypass storage limit",
     "effectsMgr.statics.barnRatio.title": "Barn expansion",
     "effectsMgr.statics.baseMetalMaxRatio.title": "Maximum base metal bonus",
     "effectsMgr.statics.beaconRelicsPerDay.title": "Relic production",
@@ -803,7 +804,7 @@
     "policy.republic.label" : "Republic",
     "policy.republic.desc" : "Best for large societies. Highly promoted leaders will provide a small bonus to the production of all kittens.",
     "policy.ritualCalendar.label": "Ritual Calendar",
-    "policy.ritualCalendar.desc": "Hold rituals on a scheduled basis synchronized with the movements of the sun. At the beginning of each season, unicorns above a certain threshold will be sacrificed. Automatic sacrifices have a 30% penalty to unicorn tears gained.",
+    "policy.ritualCalendar.desc": "Hold rituals on a scheduled basis synchronized with the movements of the sun. At the beginning of each season, unicorns above a certain threshold will be sacrificed.<br>Automatic sacrifices have a {0}% penalty to unicorn tears gained and can partially ignore storage caps.",
     "policy.siphoning.label" : "Siphoning",
     "policy.siphoning.desc" : "Pacts consume alicorns and slow down corruption instead of consuming necrocorns. Lack of alicorns or corruption is compensated by consuming necrocorns.",
     "policy.socialism.label" : "Socialism",
