--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -322,7 +322,7 @@
     "challendge.postApocalypse.flavor": "'Surely it's not that bad' they thought",
     "challendge.reservesReclaimed.msg": "Reserves were reclaimed!",
     "challendge.unicornTears.label": "Unicorn Tears",
-    "challendge.unicornTears.desc": "Restart the game with many buildings changed to require unicorn tears. Storage space for unicorns and unicorn tears is limited.<br><br>Goal: Obtain one necrocorn.",
+    "challendge.unicornTears.desc": "Restart the game with many buildings changed to require unicorn tears. Storage space for unicorns-related resources is limited.<br><br>Goal: Obtain one necrocorn.",
     "challendge.unicornTears.effect.desc": "Unicorn Tombs increase max faith based on your transcendence tier.",
     "challendge.winterIsComing.label": "Winter Has Come",
     "challendge.winterIsComing.desc": "Restart the game with only winter seasons. (Catnip will not benefit from paragon production bonus)<br><br>Goal: Get to Helios.",
